--- a/src/components/blocks/footer/ContactMe.astro
+++ b/src/components/blocks/footer/ContactMe.astro
@@ -1,4 +1,13 @@
 ---
+// Contact Me
+// ------------
+// Description: A component that displays a contact me section with a title, first column, and second column.
+// Properties:
+// - title: The title of the section (required, string)
+// - id: The ID of the section (optional, string)
+// - firstColumn: The first column of the section (optional, string)
+// - secondColumn: The second column of the section (optional, string)
+
 // Components
 // - Blocks
 import TitleText from '../titleText/TitleText.astro'
