--- a/src/components/blocks/testimonials/Feedback.astro
+++ b/src/components/blocks/testimonials/Feedback.astro
@@ -1,4 +1,13 @@
 ---
+// Feedback
+// ------------
+// Description: A component that displays testimonials in a slider format.
+// Properties:
+// - data: An array of testimonial objects (required, any[])
+// - title: The main title (required, string)
+// - id: Optional ID for the section (string)
+// - classes: Optional classes for the section (string)
+
 // Components
 // - Layout
 import Section from '../../ui/Section.astro'
