--- a/src/components/ui/Testimonial.astro
+++ b/src/components/ui/Testimonial.astro
@@ -5,12 +5,11 @@
 // Properties:
 // - Blockquote: the quote
 // - Figcaption: the caption
-// - Cite: the cite of the testimonial
-// - Avatar: the user avatar
+// - Cite: the cite of the testimonial (optional)
+// - Link: the URL for the testimonial (optional)
 // - Size: the size of the testimonial (base, sm)
 // - MobileSize: the mobile size of the testimonial (base, sm)
 // - Align: the content alignment of the testimonial (left, center)
-// - Rating: the rating of the testimonial (0 to 5) - optional
 // - QuoteSize: the size of the quote icon
 // - classes: additional classes
 // Reference: https://wind-ui.com/components/testimonials/
