--- a/src/components/ui/cards/partials/CardBody.astro
+++ b/src/components/ui/cards/partials/CardBody.astro
@@ -1,9 +1,9 @@
 ---
 // Card body
 // ------------
-// Description: the body of the main content of the card
+// Description: A container for the main content of the card.
 // Properties:
-// - classes: extra classes
+// - classes: Additional classes (optional, string)
 
 // Props
 type Props = {
