--- a/src/components/blocks/caseStudies/CaseStudiesHomeSection.astro
+++ b/src/components/blocks/caseStudies/CaseStudiesHomeSection.astro
@@ -43,6 +43,7 @@ const sortedCaseStudies = allCaseStudies.sort((a: any, b: any) => {
 			</Col>
 			<Col span="5" classes="lg:self-end lg:justify-self-end">
 				<Button link="/case-studies" type="link" variation="link">
+					<span class="sr-only">View more case studies</span>
 					more <Icon name="long-arrow-right" />
 				</Button>
 			</Col>
