--- a/src/pages/index-2.astro
+++ b/src/pages/index-2.astro
@@ -23,9 +23,9 @@ const allCaseStudies = await getCollection('caseStudies', ({ id }) => {
 
 // - SEO
 const SEO = {
-	title: 'Milo | Showcase your skills',
+	title: 'Milo – Personal Resume & Portfolio Theme Built with Astro',
 	description:
-		'Milo is a platform for showcasing your skills and projects. It is a simple and easy-to-use platform for showcasing your skills and projects.'
+		'Milo is a fast, elegant, and accessible Astro theme built to showcase your resume, projects, and skills. Ideal for creating a personal portfolio or professional profile site.'
 }
 
 // - About me Data
