--- a/src/pages/case-studies/[...page].astro
+++ b/src/pages/case-studies/[...page].astro
@@ -27,9 +27,9 @@ const { page } = Astro.props as any
 // Content
 // - SEO
 const SEO = {
-	title: 'Milo | Case Studies',
+	title: 'Case Studies – Showcasing Work with the Milo Astro Theme',
 	description:
-		"Explore Milo's latest news designed to enhance productivity, ensure top-notch security, and integrate seamlessly with your favorite tools. Join thousands of satisfied users and transform your workflow with Milo today!"
+		'Explore detailed case studies and projects built using the Milo Astro theme. Discover how you can present your work, achievements, and process in a modern, fast, and accessible format.'
 }
 // - Page Header
 const header = {
