--- a/src/layouts/CaseStudyLayout.astro
+++ b/src/layouts/CaseStudyLayout.astro
@@ -4,7 +4,7 @@ const { frontmatter } = Astro.props
 
 // Components
 // - Layout
-import Layout from './Layout.astro'
+import Layout from './LayoutLight.astro'
 import Col from '../components/ui/Col.astro'
 import Row from '../components/ui/Row.astro'
 import Section from '../components/ui/Section.astro'
@@ -12,8 +12,6 @@ import Section from '../components/ui/Section.astro'
 import TitleText from '../components/blocks/titleText/TitleText.astro'
 import Feedback from '../components/blocks/testimonials/Feedback.astro'
 // - UI
-import Button from '../components/ui/Button.astro'
-import { Icon } from 'astro-icon/components'
 import { Image } from 'astro:assets'
 
 // Content
