--- a/src/pages/case-studies/[...page].astro
+++ b/src/pages/case-studies/[...page].astro
@@ -5,7 +5,7 @@
 
 // Components
 // - Layout
-import Layout from '../../layouts/Layout.astro'
+import Layout from '../../layouts/LayoutLight.astro'
 import Section from '../../components/ui/Section.astro'
 import Row from '../../components/ui/Row.astro'
 import Col from '../../components/ui/Col.astro'
