--- a/src/layouts/CaseStudyLayout.astro
+++ b/src/layouts/CaseStudyLayout.astro
@@ -34,10 +34,9 @@ console.log(frontmatter.id)
 <Layout title={SEO.title} description={SEO.description}>
 	<Section id="intro" classes="!overflow-visible">
 		<Row>
-			<Col span="2" />
-			<Col span="10">
+			<Col span="12">
 				<div>
-					<h1 class="lg:text-9xl">
+					<h1 class="text-center lg:text-9xl">
 						{frontmatter.title}
 					</h1>
 				</div>
