minor layout issues

--- a/src/components/blocks/hero/HomeCTA.astro
+++ b/src/components/blocks/hero/HomeCTA.astro
@@ -35,9 +35,7 @@ const { imageSource } = Astro.props
 				format="webp"
 			/>
 			<div class="relative z-10 text-left">
-				<h1
-					class="w-initial text-left text-4xl leading-[60px] opacity-80 md:text-9xl md:leading-[128px]"
-				>
+				<h1 class="w-initial text-left text-4xl leading-[60px] md:text-9xl md:leading-[128px]">
 					I’m Milo <br /> I build <br /> for the web.
 				</h1>
 
