--- a/src/components/blocks/hero/HomeVideoCTA.astro
+++ b/src/components/blocks/hero/HomeVideoCTA.astro
@@ -34,9 +34,7 @@ const { videoSource } = Astro.props
 			</video>
 
 			<div class="relative z-10 text-left">
-				<h1
-					class="w-initial text-left text-4xl leading-[60px] opacity-80 md:text-8xl md:leading-[120px]"
-				>
+				<h1 class="w-initial text-left text-4xl leading-[60px] md:text-8xl md:leading-[120px]">
 					I’m Milo <br /> I build <br /> for the web.
 				</h1>
 
